# demo_data_engineering

./: .gitignore  README.md  pyproject.toml
adhoc_scripts/: bq_ddl.sql
airflow/: .env  README.md  docker-compose.yml  docker-compose.yml.bak  init-user.sh  requirements.txt
airflow/secrets/: db_credentials.yaml
common/: bigquery_client.py  config.py  db_utils.py  dq_checks.py  pipeline_config.yaml
dags/: ecommerce_data_pipeline.py
pipelines/: dim_campaign.py  dim_customer.py  dim_date.py  dim_product.py  dim_seller.py  fact_cart.py  fact_inventory.py  fact_marketing.py  fact_sales.py  run_pipelines.py
project_setup/bigquery_sql/: 01_dim_date.sql  02_dim_customer.sql  03_dim_seller.sql  04_dim_product.sql  05_dim_campaign.sql  06_fact_sales.sql  07_fact_inventory.sql  08_fact_cart.sql  09_fact_marketing.sql
project_setup/config/: bigquery_config.py  db_config.py
project_setup/data/: campaign_performance.csv  cart_events.csv  customers.csv  inventory.csv  marketing_campaigns.csv  order_items.csv  orders.csv  products.csv  sellers.csv  transactions.csv
project_setup/scripts/: create_bigquery_tables.py  load_data.py  run_sql_scripts.py
project_setup/sql/: 01_create_customers.sql  02_create_sellers.sql  03_create_products.sql  04_create_inventory.sql  05_create_orders.sql  06_create_order_items.sql  07_create_marketing_campaigns.sql  08_create_campaign_performance.sql  09_create_cart_events.sql
secrets/: .gitkeep
